order+payment+return(未测试)+review(未测试)

--- a/main_system/templates/layout.html
+++ b/main_system/templates/layout.html
@@ -62,7 +62,8 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="/customer/profile/">Profile</a></li>
-                                <li><a class="dropdown-item" href="/customer/order/">My orders</a></li>
+                                <li><a class="dropdown-item" href="/customer/order/">My Orders</a></li>
+                                <li><a class="dropdown-item" href="/customer/wallet/">My Wallet</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Log out</a></li>
                             </ul>
